--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,7 +6,7 @@
 </script>
 
 
-  <div class="row">
+  <div class="row mt-3">
     <div class="col-8 offset-3">
       <h3>
         <%= listing.title %>
@@ -21,7 +21,7 @@
           </b></p>
         <%= listing.description %> <br>
           <b>&#8377; <%= listing.price.toLocaleString("en-IN") %></b> <br>
-          <%= listing.location %>
+          <i class="fa-solid fa-location-dot"></i> <%= listing.location %>
             <%= listing.country %>
               </p>
       </div>
