--- a/public/css/style.css
+++ b/public/css/style.css
@@ -231,21 +231,30 @@ select {
 /*              review           */
 /*********************************/
 .review-card {
-    background-color: rgb(250, 250, 250);
     display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap-reverse;
-}
-
-.review-card-list {
-    border: #000000 2px dotted;
-    border-radius: 1rem;
-    margin: 1rem;
-    padding: 1rem;
-    background-color: #f3f3f3;
-    box-shadow: #000000 1px 2px 8px;
-    width: 90%;
-}
+    flex-direction: column;
+    gap: 20px;
+  }
+  
+  .review-row {
+    display: flex;
+    gap: 20px;
+  }
+  
+  .review-item {
+    background-color: #f9f9f9;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    flex: 1;
+    min-width: 0;
+    max-width: calc(50% - 10px); /* Two items in a row with gap */
+    width: calc(50% - 10px); /* Two items in a row with gap */
+  }
+  
+  /* Adjust other styles as needed */
+  
+  
 
 
 /* MAP */
@@ -414,4 +423,50 @@ h3 {
   
   .location-option:hover {
     background-color: #f0f0f0;
+  }
+
+
+
+
+
+
+/**********************************/
+/*         filter icons          */
+/*********************************/
+  #filters {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  .filter {
+    text-align: center;
+    margin-top: 2rem;
+    margin-right: 2rem;
+    padding-bottom: 1rem;
+    opacity: 0.7;
+  }
+
+  .filter:hover {
+    opacity: 1;
+    cursor: pointer;
+    text-decoration: underline;
+  }
+
+  .filter p {
+    font-size: 0.8rem;
+  }
+
+  .tax-info {
+    display: none;
+  }
+
+  .tax-toggle {
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 3rem;
+    padding: 1rem;
+    margin-left: 2rem;
+    display: flex;
+    align-items: center;
   }
