--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -14,6 +14,23 @@
     </div>
 
     <div class="form-group">
+      <label for="type">Type:</label>
+      <select class="input-field" id="type" name="listing[type]" required>
+        <option value="" disabled selected>Select type</option>
+        <option value="Rooms">Rooms</option>
+        <option value="Iconic Cities">Iconic Cities</option>
+        <option value="Mountain">Mountain</option>
+        <option value="Castles">Castles</option>
+        <option value="Amazing pools">Amazing pools</option>
+        <option value="Farms">Farms</option>
+        <option value="Camping">Camping</option>
+        <option value="Arctic">Arctic</option>
+        <option value="Beach">Beach</option>
+        <!-- Add more options as needed -->
+      </select>
+    </div>
+
+    <div class="form-group">
       <label for="image">Upload Image</label>
       <input class="input-field" id="image" name="listing[image]" type="file" required/>
     </div>
