--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,8 +1,8 @@
 <% layout("/layouts/boilerplate") %>
 
   <script>
-    const mapToken = "<%= process.env.MAP_TOKEN %>";// because public js has no access of variables, so created here
-    const listing = <% - JSON.stringify(listing) %>;
+    const mapToken = "<%- process.env.MAP_TOKEN %>";// because public js has no access of variables, so created here
+    const listing = <%- JSON.stringify(listing) %>;
   </script>
 
 
@@ -16,7 +16,9 @@
       <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
       <div class="card-body">
         <p class="card-text">
-        <p>Owned By:- <b><%= listing.owner.username %></b></p>
+        <p>Owned By:- <b>
+            <%= listing.owner.username %>
+          </b></p>
         <%= listing.description %> <br> <br>
           <p>
             <b>&#8377; <%= listing.price.toLocaleString("en-IN") %></b> <br>
@@ -86,47 +88,53 @@
 
               <h4>All Reviews</h4>
               <div class="review-card">
-                <% for (let i = 0; i < listing.reviews.length; i += 2) { %>
+                <% for (let i=0; i < listing.reviews.length; i +=2) { %>
                   <div class="review-row">
                     <div class="review-item">
-                      <h5>@<%= listing.reviews[i].author.username %></h5>
+                      <h5>@<%= listing.reviews[i].author.username %>
+                      </h5>
                       <h4>Rating</h4>
                       <p class="starability-result" data-rating="<%= listing.reviews[i].rating %>">
                         Rated: <%= listing.reviews[i].rating %> stars
                       </p>
-                      <p><%= listing.reviews[i].comment %></p>
-                      <form action="/listings/<%= listing._id %>/reviews/<%= listing.reviews[i]._id %>?_method=DELETE" method="post" class="mb-3">
+                      <p>
+                        <%= listing.reviews[i].comment %>
+                      </p>
+                      <form action="/listings/<%= listing._id %>/reviews/<%= listing.reviews[i]._id %>?_method=DELETE"
+                        method="post" class="mb-3">
                         <button class="btn btn-sm btn-dark">Delete</button>
                       </form>
                     </div>
                     <% if (listing.reviews[i + 1]) { %>
                       <div class="review-item">
-                        <h5>@<%= listing.reviews[i + 1].author.username %></h5>
+                        <h5>@<%= listing.reviews[i + 1].author.username %>
+                        </h5>
                         <h4>Rating</h4>
                         <p class="starability-result" data-rating="<%= listing.reviews[i + 1].rating %>">
                           Rated: <%= listing.reviews[i + 1].rating %> stars
                         </p>
-                        <p><%= listing.reviews[i + 1].comment %></p>
-                        <form action="/listings/<%= listing._id %>/reviews/<%= listing.reviews[i + 1]._id %>?_method=DELETE" method="post" class="mb-3">
+                        <p>
+                          <%= listing.reviews[i + 1].comment %>
+                        </p>
+                        <form
+                          action="/listings/<%= listing._id %>/reviews/<%= listing.reviews[i + 1]._id %>?_method=DELETE"
+                          method="post" class="mb-3">
                           <button class="btn btn-sm btn-dark">Delete</button>
                         </form>
                       </div>
-                    <% } %>
+                      <% } %>
                   </div>
-                <% } %>
+                  <% } %>
               </div>
-              
-              
+
+
         </div>
 
-
-
-
-
   </div>
-  
+
   <div class="col-8 offset-3 mt-3">
     <h3>Where you'll be</h3>
+    <h6> <%= listing.geometry.coordinates %> </h6>
     <div id="map"></div>
   </div>
 
