--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,43 +7,45 @@
 
 
   <div class="row mt-3">
-    <div class="col-8 offset-3">
-      <h3>
-        <%= listing.title %>
-      </h3>
-    </div>
-    <div class="card col-6 offset-3">
-      <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
-      <div class="card-body">
-        <p class="card-text">
-        <p>Owned By:- <b>
-            <%= listing.owner.username %>
-          </b></p>
-        <%= listing.description %> <br> <br>
-          <p>
-            <b>&#8377; <%= listing.price.toLocaleString("en-IN") %></b> <br>
-            <i class="fa-solid fa-location-dot"></i>
-            <%= listing.location %>
-              <%= listing.country %>
-          </p>
-          </p>
-          <!-- Display the type -->
-          <p><i class="fa-solid fa-tag"></i>
-            <%= listing.type %>
-          </p>
+    <div class="show-container">
+      <div class="">
+        <h3>
+          <%= listing.title %>
+        </h3>
       </div>
-    </div>
-
-    <% if (currUser && currUser._id.equals(listing.owner._id)) { %>
-      <div class="btns">
-        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 "
-          style="background-color: rgb(254, 73, 106); ">Edit</a>
-
-        <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
-          <button class="btn btn-dark offset-5">Delete</button>
-        </form>
+      <div class="">
+        <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
+        <div class="card-body">
+          <p class="card-text">
+          <p>Owned By:- <b>
+              <%= listing.owner.username %>
+            </b></p>
+          <%= listing.description %> <br> <br>
+            <p>
+              <b>&#8377; <%= listing.price.toLocaleString("en-IN") %></b> <br>
+              <i class="fa-solid fa-location-dot"></i>
+              <%= listing.location %>
+                <%= listing.country %>
+            </p>
+            </p>
+            <!-- Display the type -->
+            <p><i class="fa-solid fa-tag"></i>
+              <%= listing.type %>
+            </p>
+        </div>
       </div>
-      <% } %>
+  
+      <% if (currUser && currUser._id.equals(listing.owner._id)) { %>
+        <div class="btns">
+          <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark btn-margin"
+            style="background-color: rgb(254, 73, 106); ">Edit</a>
+  
+          <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
+            <button class="btn btn-dark ">Delete</button>
+          </form>
+        </div>
+        <% } %>
+    </div>
 
 
 
@@ -132,9 +134,8 @@
 
   </div>
 
-  <div class="col-8 offset-3 mt-3">
+  <div class="map-container">
     <h3>Where you'll be</h3>
-    <h6> <%= listing.geometry.coordinates %> </h6>
     <div id="map"></div>
   </div>
 
