--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,3 +1,5 @@
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa-solid fa-eject fa-bounce fa-2xl" style="color: #ff3d3d;"></i></button>
+
 <footer class="site-footer">
     <div class="footer-content">
         <div class="footer-section">
@@ -49,3 +51,26 @@
         </div>
     </div>
 </footer>
+
+
+<script>
+    // Get the button:
+let mybutton = document.getElementById("myBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0; // For Safari
+  document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+}
+</script>
