--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
 
 
-  <h3>Edit your Listing</h3>
+  <h3 class="mt-3">Edit your Listing</h3>
   <form class="listing-form" method="POST" action="/listings/<%= listing._id %>?_method=PUT"
     enctype="multipart/form-data">
     <div class="form-group">
