--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
 
 
-  <h3>Create a New Listing</h3>
+  <h3 class="mt-3">Create a New Listing</h3>
   <form class="listing-form" method="POST" action="/listings" enctype="multipart/form-data">
     <div class="form-group">
       <label for="title">Title:</label>
